--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
 </head>
 
 
-<body>
+<body id="by" class="darkMode">
     <header>
         <div class="container">
             <h1>Calculadora inflacionario, de devaluacion y divisas</h1>
         </div>
     </header>
-<div class="divisas">
 
+<div class="divisas">
 </div>
-    <div class="container-r">
+<div class="modo">
+<button class="enlace">modo oscuro</button>
+</div>
+  <div class="container-r">
         <section class="main row">
             <article class="col-xs-12 col-sm-9 col-md-7 col-lg-6 ">
                 <p>En esta pagina encontras una calculadora inflacionaria, con el objetivo de calcular la devaluacion del peso argentino a traves de los años, incluso compararlo con las divisas mas usadas por los argentinos.
@@ -109,6 +112,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="inflacion.js"></script>
+<script src="dolar.js"></script>
     <script src="java.js"></script>
 </body>
 
