--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 <body id="by" class="darkMode">
+    <p>presione para ver la tabla de valores que usamos para calcular</p>
     <header>
         <div class="container">
             <h1>Calculadora inflacionario, de devaluacion y divisas</h1>
