--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 
 <body id="by" class="darkMode">
-    <p>presione para ver la tabla de valores que usamos para calcular</p>
     <header>
         <div class="container">
             <h1>Calculadora inflacionario, de devaluacion y divisas</h1>
@@ -102,6 +101,15 @@
     </div>
 
     <p><strong>la inflación caracteriza un cambio en el poder adquisitivo, es decir, la depreciación de la moneda en relación con los bienes: puede comprar menos bienes por la misma cantidad de dinero. La devaluación significa la depreciación de la moneda nacional en relación con otras monedas.</strong></p>
+
+
+<div >
+    <button id="btn1"> dolar</button>
+    <button id="btn2">inflacion</button>
+    <p>presione para ver la tabla de valores que usamos para calcular</p>
+<div class="api"></div>
+
+</div>
 
     <footer>
         <div class="container">
